syntax = "proto3";

option go_package = "/api/v1";

package api.v1;

service Echo {
    rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service Memo {
    rpc Add(MemoAddRequest) returns (MemoAddResponse);
    rpc Get(MemoGetRequest) returns (MemoGetResponse);
    rpc List(MemoListRequest) returns (MemoListResponse);
}

message MemoAddRequest {
    string memo = 1;
}

message MemoAddResponse {
    int64 id = 1;
}

message MemoGetRequest {
    int64 id = 1;
}

message MemoGetResponse {
    string memo = 1;
}

message MemoListRequest {}

message MemoListResponse {
    repeated string memos = 1;
}
